plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
dependencies {

    implementation project(':common')

    // Tribuo - 필요한 모듈만
    implementation 'org.tribuo:tribuo-all:4.3.1'

    // H2O.ai - 학습/업리프트/모델링
    implementation 'ai.h2o:h2o-core:3.46.0.1'
    implementation 'ai.h2o:h2o-algos:3.46.0.1'
    implementation 'ai.h2o:h2o-app:3.46.0.1'
    implementation 'ai.h2o:h2o-genmodel:3.46.0.1'
}

tasks.withType(JavaExec) {
    jvmArgs += [
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
            '--add-opens', 'java.base/java.io=ALL-UNNAMED'
    ]
}
